# rotation-invariant-neural-networks

./: .gitignore  pyproject.toml
benchmarks/incompleteness/: README.md
benchmarks/incompleteness/generate_data/: incompleteness.py  verify_dataset.py
benchmarks/incompleteness/results/: l0_n1.md  l2_n2.md  l2_n3.md  l3_n3.md  l3_n4.md  plot_sweep_results.py
benchmarks/incompleteness/results/all_nodes/: l1_n2.md  l3_n2.md
benchmarks/incompleteness/results/central_node/: l0_n1.md  l1_n2.md
benchmarks/k_chain/: README.md  kchains.py  plot_sweep_results.py  sweep_kchain.py  train_kchain.py  verify_dataset.py
benchmarks/k_chain/generate_data/: kchains.py  verify_dataset.py
benchmarks/k_chain/logs/hiphopnn/: training.md
benchmarks/k_chain/logs/hipnn/: k=2.md  k=3.md  k=4.md
benchmarks/k_chain/results/: l0_n1.md  l1_n2.md  l2_n2.md  l2_n3.md  l3_n2.md  l3_n3.md  l3_n4.md  plot_sweep_results.py
benchmarks/k_chain/results/hipnnvec/: training.md
benchmarks/k_chain/run_models/: sweep_kchain.py  train_kchain.py
benchmarks/run_models/: sweep.py  train.py
tests/: test_central_readout.py
