[project]
name = "rotation-invariant-neural-networks"
version = "0.1.0"
description = "Moment-invariant tools and geometric neural network benchmarks."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "hippynn @ git+https://github.com/lanl/hippynn.git",
    "matplotlib",
    "networkx",
    "numpy",
    "torch>2.0",
]

[tool.uv]
package = false
